--- a/hyperRailProj/composer.json
+++ b/hyperRailProj/composer.json
@@ -4,7 +4,9 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.1.*"
+		"laravel/framework": "4.1.*",
+        "easyrdf/easyrdf": "*",
+        "ml/json-ld": "1.*"
 	},
 	"autoload": {
 		"classmap": [
