--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.*",
-        "way/generators": "2.*"
+        "way/generators": "2.*",
+        "barryvdh/laravel-ide-helper": "1.*"
     },
 	"autoload": {
 		"classmap": [
@@ -35,6 +36,7 @@
 		],
 		"post-update-cmd": [
 			"php artisan clear-compiled",
+            "php artisan ide-helper:generate",
 			"php artisan optimize"
 		],
 		"post-create-project-cmd": [
