--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
-			"app/tests/TestCase.php"
+			"app/tests/TestCase.php",
+            "app/exceptions"
 		],
         "psr-0": {
             "hyperRail" : "app/"
