--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "easyrdf/easyrdf": "*",
         "semsol/arc2": "*",
         "ml/json-ld": "1.*",
-        "willdurand/negotiation": "@stable"
+        "willdurand/negotiation": "@stable",
+        "artdarek/oauth-4-laravel": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.*",
