--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ sftp-config.json
 .env.*.php
 .env.php
 .vagrant
+app/config/testing
+app/config/development
+app/config/production
 
 # Dotfiles
 .DS_Store
