--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "ml/json-ld": "1.*",
         "willdurand/negotiation": "@stable",
         "artdarek/oauth-4-laravel": "dev-master",
-        "cartalyst/sentry": "2.1.*"
+        "cartalyst/sentry": "2.1.*",
+        "bshaffer/oauth2-server-php": "v1.3"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.*",
