readding storage folder

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ sftp-config.json
 app/config/testing
 app/config/development
 app/config/production
+!app/storage/.gitkeep
+app/storage/*
 
 # Dotfiles
 .DS_Store
