--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
             "app/exceptions"
 		],
         "psr-0": {
-            "hyperRail" : "app/"
+            "hyperRail\\" : "app/"
         }
 	},
 	"scripts": {
