--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "easyrdf/easyrdf": "*",
+        "semsol/arc2": "*",
+        "ml/json-ld": "1.*",
+        "willdurand/negotiation": "@stable"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -18,6 +22,9 @@
         "classmap": [
             "database"
         ],
+        "psr-0": {
+            "hyperRail\\" : "app/"
+        },
         "psr-4": {
             "App\\": "app/"
         }
