set filters to middleware + several updates

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 CACHE_DRIVER=file
-SESSION_DRIVER=file
+SESSION_DRIVER=cookie
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
