--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "gulp": "^3.8.8",
+    "gulp-bower": "0.0.10",
+    "gulp-notify": "^2.2.0",
+    "gulp-ruby-sass": "^1.1.0"
   },
   "dependencies": {
     "laravel-elixir": "^3.0.0",
     "irail-stations": "*"
   },
-  "scripts" : {
-    "update-stations" : "irail-stations > app/stations.json"
+  "scripts": {
+    "update-stations": "irail-stations > app/stations.json"
   }
 }
