--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "private": true,
-  "devDependencies": {
-    "gulp": "^3.8.8",
-    "gulp-bower": "0.0.10",
-    "gulp-notify": "^2.2.0",
-    "gulp-ruby-sass": "^1.1.0"
-  },
+  "name": "hyperRail",
   "dependencies": {
-    "laravel-elixir": "^3.0.0",
+    "bower": "*",
+    "grunt": "*",
+    "grunt-cli": "*",
+    "glob": "*",
     "irail-stations": "*"
   },
-  "scripts": {
-    "update-stations": "irail-stations > app/stations.json"
+  "scripts" : {
+    "update-stations" : "irail-stations > app/stations.json"
+  },
+  "devDependencies": {
+    "grunt-contrib-concat": "*",
+    "grunt-contrib-jshint": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-watch": "*",
+    "grunt-contrib-cssmin": "*",
+    "grunt-contrib-sass": "*",
+    "grunt-autoprefixer": "*",
+    "grunt-contrib-compass": "~0.9.0",
+    "grunt-contrib-copy": "*",
+    "jit-grunt": "*"
   }
 }
