--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,9 @@
     "scripts": {
         "post-install-cmd": [
             "php artisan clear-compiled",
-            "php artisan optimize"
+            "php artisan optimize",
+            "php -r \"copy('.env.example', '.env');\"",
+            "php artisan key:generate"
         ],
         "pre-update-cmd": [
             "php artisan clear-compiled"
