--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,8 @@
     "jquery": "~2.1.1",
     "fontawesome": "~4.1.0",
     "animate.css": "~3.1.1",
-    "angular-bootstrap": "*",
-    "angular-animate": "*",
+    "angular-bootstrap": "~0.11.0",
+    "angular-animate": "~1.2.18",
     "bootstrap-sass-official": "*",
     "bootstrap-sass": "~3.0.2"
   }
