--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "easyrdf/easyrdf": "*",
         "semsol/arc2": "*",
         "ml/json-ld": "1.*",
-        "willdurand/negotiation": "@stable"
+        "willdurand/negotiation": "@stable",
+        "irail/stations": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -39,12 +40,14 @@
             "php artisan clear-compiled",
             "php artisan optimize",
             "php -r \"copy('.env.example', '.env');\"",
-            "php artisan key:generate"
+            "php artisan key:generate",
+            "cd vendor/irail/stations; npm install ; node bin/build.js > stations.jsonld"
         ],
         "pre-update-cmd": [
             "php artisan clear-compiled"
         ],
         "post-update-cmd": [
+            "cd vendor/irail/stations; npm install ; node bin/build.js > stations.jsonld",
             "php artisan optimize"
         ],
         "post-root-package-install": [
