Added the license, repository and bugs attribute to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "name": "hyperRail",
+  "license": "CC0",
+  "bugs": {
+    "url": "https://www.github.com/iRail/hyperRail/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://www.github.com/iRail/hyperRail/issues"
+  },
   "dependencies": {
     "bower": "*",
     "grunt": "*",
