Attempt to fix TravisCI

--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,15 @@
         "ml/json-ld": "1.*",
         "willdurand/negotiation": "@stable",
         "irail/stations": "^1.1",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "barryvdh/laravel-debugbar": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "phpspec/phpspec": "~2.1",
+        "laravel/homestead": "^2.1"
     },
     "autoload": {
         "classmap": [
