--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,12 @@ script:
   - phpunit
 
 # Code coverage
-before_install:
-  - pip install codecov
+before_script:
+    - travis_retry composer self-update
+    - travis_retry composer install --no-interaction --prefer-source --dev
+
+script:
+    - vendor/bin/phpunit --coverage-clover=coverage.xml
+
 after_success:
-  - codecov
+    - bash <(curl -s https://codecov.io/bash)
