--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_script:
 
 script:
     - vendor/bin/phpunit --coverage-clover=coverage.xml
+    - php artisan serve
 
 after_success:
     - bash <(curl -s https://codecov.io/bash)
