--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ before_script:
 before_script:
     - travis_retry composer self-update
     - travis_retry composer install --no-interaction --prefer-source --dev
+    - php -S localhost:8000 -t public server.php
 
 script:
     - vendor/bin/phpunit --coverage-clover=coverage.xml
-    - php artisan serve
     - phpunit
 
 after_success:
