--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
     - travis_retry composer self-update
     - travis_retry composer install --no-interaction --prefer-source --dev
 
-    - sudo service apache2 start
+    - service apache2 start
 
 script:
     - vendor/bin/phpunit --coverage-clover=coverage.xml
