--- a/.travis.yml
+++ b/.travis.yml
@@ -18,18 +18,18 @@ before_script:
     - travis_retry composer self-update
     - travis_retry composer install --no-interaction --prefer-source --dev
 
-    before_script:
-       - sudo apt-get update
-       - sudo apt-get install apache2 libapache2-mod-fastcgi
-       # enable php-fpm
-       - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
-       - sudo a2enmod rewrite actions fastcgi alias
-       - echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-       - ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
-       # configure apache virtual hosts
-       - sudo cp -f build/travis-ci-apache /etc/apache2/sites-available/default
-       - sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/default
-       - sudo service apache2 restart
+    #apache
+    - sudo apt-get update
+    - sudo apt-get install apache2 libapache2-mod-fastcgi
+    # enable php-fpm
+    - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
+    - sudo a2enmod rewrite actions fastcgi alias
+    - echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+    - ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
+    # configure apache virtual hosts
+    - sudo cp -f build/travis-ci-apache /etc/apache2/sites-available/default
+    - sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/default
+    - sudo service apache2 restart
 
 script:
     - vendor/bin/phpunit --coverage-clover=coverage.xml
