--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
+
+# set language to php.
+# And also specify the PHP versions.
 language: php
 php:
   - "5.5"
   - "5.6"
   - "7.0"
   - hhvm
+
+# set If TravisCI can use sudo or NOT.
 sudo: true
+
 env:
 addons:
   apt:
@@ -35,5 +41,6 @@ script:
     - vendor/bin/phpunit --coverage-clover=coverage.xml
     - phpunit
 
+# Set functions to Ru If Travis passed.
 after_success:
     - bash <(curl -s https://codecov.io/bash)
