--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ language: php
 php:
   - "5.5"
   - "5.6"
-  - "7.0"
-  - hhvm
+  # - "7.0"
+  # - hhvm
 
 # set If TravisCI can use sudo or NOT.
 sudo: true
