--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         "easyrdf/easyrdf": "*",
         "semsol/arc2": "*",
         "ml/json-ld": "1.*",
-        "willdurand/negotiation": "@stable",
         "irail/stations": "^1.1",
         "guzzlehttp/guzzle": "~6.0",
-        "barryvdh/laravel-debugbar": "^2.0"
+        "barryvdh/laravel-debugbar": "^2.0",
+        "willdurand/negotiation": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
