--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-bootstrap": "~0.11.0",
     "angular-animate": "~1.2.18",
     "bootstrap-sass-official": "*",
-    "bootstrap-sass": "~3.0.2"
+    "bootstrap-sass": "~3.0.2",
+    "angular": "1.2.29"
   }
 }
