Ignore .map sourcemaps files

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ bootstrap/compiled.php
 composer.phar
 docs/api.apib
 
-
 # Development
 .idea
 .sublimets
@@ -26,3 +25,4 @@ Thumbs.db
 
 .env
 bower_components
+*.map
