--- a/bower.json
+++ b/bower.json
@@ -14,12 +14,12 @@
   ],
   "dependencies": {
     "jquery": "~2.1.1",
-    "fontawesome": "~4.1.0",
     "animate.css": "~3.1.1",
     "angular-bootstrap": "~0.11.0",
     "angular-animate": "~1.2.18",
     "bootstrap-sass-official": "*",
-    "bootstrap-sass": "~3.0.2",
-    "angular": "1.2.29"
+    "angular": "1.2.29",
+    "font-awesome": "fontawesome#^4.6.3",
+    "bootstrap-sass": "bootstrap-sass-official#^3.3.6"
   }
 }
