--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "glob": "*"
   },
   "devDependencies": {
+    "compass": "^0.1.1",
+    "grunt-autoprefixer": "*",
+    "grunt-contrib-compass": "^1.1.1",
     "grunt-contrib-concat": "*",
+    "grunt-contrib-copy": "*",
+    "grunt-contrib-cssmin": "*",
     "grunt-contrib-jshint": "*",
+    "grunt-contrib-sass": "*",
     "grunt-contrib-uglify": "*",
     "grunt-contrib-watch": "*",
-    "grunt-contrib-cssmin": "*",
-    "grunt-contrib-sass": "*",
-    "grunt-autoprefixer": "*",
-    "grunt-contrib-compass": "~0.9.0",
-    "grunt-contrib-copy": "*",
     "jit-grunt": "*"
   }
 }
