Feature/apps page (#208)
* Update README.md

You can't do composer update if you didn't install it first.

* A first startup of the iRail.be/app page

* Intermediate commit for Serkan

* Images and SVG for App page

* Apps page, css styling, and images

* Apps page, structure and content: OK

* centered the footer & removed commented html code

* tried to fix messy sentence

* Removed build files(css/js)

* CSS/Html fix in navigation on app page

* Use iRail iso Use an iRail app.

* Changed gif with Spitsgids mascottes

* Updated text, fixed header color, put them in REAL black.

* Removed unused css style

* The empty space above every header is now 60px iso 70px

* Replaced the SVG button with selfmade link with bg and svg logo in it

* Fixed icon placement in Plan route button and replaced all col-xs-11 in order to remove vertical scrollbar

* Removed unused images

* Fixed responsiveness, style stuff, meta tags and json ld.

* added an image

* Built css and js files

* Everything works!!!

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ bootstrap/compiled.php
 composer.phar
 docs/api.apib
 
+storage
+
 # Development
 .idea
 .sublimets
@@ -25,4 +27,5 @@ Thumbs.db
 
 .env
 bower_components
+
 *.map
