Use valid SPDX license
When installing I got the followign error:

> warning hyperRail: License should be a valid SPDX license expression

This was solved by changing to `CC0-1.0` ([link](https://spdx.org/licenses/CC0-1.0))
s.

Also add a LICENSE.md file picked up by some tools (but not currenly by GitHub, since it doesn't support CC licenses for code, see https://github.com/github/choosealicense.com/issues/33)

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "iRail/hyperRail",
     "description": "The web interface of iRail.be",
     "keywords": [],
-    "license": "CC0",
+    "license": "CC0-1.0",
     "type": "project",
     "require": {
         "php": ">=5.5.9",
