--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyperRail",
-  "license": "CC0",
+  "license": "CC0-1.0",
   "bugs": {
     "url": "https://www.github.com/iRail/hyperRail/issues"
   },
