Added eluceo/ical dependency

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "irail/stations": "^1.1",
         "guzzlehttp/guzzle": "~6.0",
         "barryvdh/laravel-debugbar": "^2.0",
-        "willdurand/negotiation": "^1.5.0"
+        "willdurand/negotiation": "^1.5.0",
+        "eluceo/ical": "^0.12.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
