--- a/composer.json
+++ b/composer.json
@@ -5,51 +5,69 @@
     "license": "CC0-1.0",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.1.*",
+        "php": "^7.1.3",
+        "barryvdh/laravel-debugbar": "^3.1",
         "easyrdf/easyrdf": "*",
-        "semsol/arc2": "*",
-        "ml/json-ld": "1.*",
-        "irail/stations": "^1.1",
         "guzzlehttp/guzzle": "~6.0",
-        "barryvdh/laravel-debugbar": "^2.0",
+        "irail/stations": "^1.1",
+        "laravel/framework": "5.6.*",
+        "ml/json-ld": "1.*",
+        "semsol/arc2": "*",
         "willdurand/negotiation": "^1.5.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1",
-        "laravel/homestead": "^2.1"
+        "fzaninotto/faker": "^1.4",
+        "laravel/homestead": "^7.2",
+        "mockery/mockery": "^1.0",
+        "phpspec/phpspec": "^4.0",
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database/seeds"
         ],
         "psr-4": {
             "App\\": "app/"
         }
     },
     "autoload-dev": {
-        "classmap": [
-            "tests/TestCase.php"
-        ]
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "dont-discover": [
+            ]
+        }
     },
     "scripts": {
         "post-install-cmd": [
             "php artisan clear-compiled",
-            "php artisan optimize",
             "cd vendor/irail/stations; npm install ; node bin/build.js > stations.jsonld"
         ],
         "pre-update-cmd": [
             "php artisan clear-compiled"
         ],
         "post-update-cmd": [
-            "cd vendor/irail/stations; npm install ; node bin/build.js > stations.jsonld",
-            "php artisan optimize"
+            "cd vendor/irail/stations; npm install ; node bin/build.js > stations.jsonld"
+        ],
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "@php artisan key:generate"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "config": {
-        "preferred-install": "dist"
-    }
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "optimize-autoloader": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
